# Ascend_YOLO

./: .gitignore  README.md  convert.py  git.sh  infer_hbb.sh  infer_obb.sh  run_compile.sh  run_infer.sh  val.py  val_hbb.py  val_obb.py
model/: aipp512.cfg  fusion_result.json
output_hbb/labels/: XDU10.txt  XDU103.txt  XDU104.txt  XDU108.txt  XDU110.txt  XDU111.txt  XDU115.txt  XDU117.txt  XDU129.txt  XDU134.txt  XDU142.txt  XDU146.txt  XDU147.txt  XDU151.txt  XDU160.txt  XDU164.txt  XDU169.txt  XDU176.txt  XDU178.txt  XDU185.txt  XDU189.txt  XDU192.txt  XDU193.txt  XDU195.txt  XDU205.txt  XDU209.txt  XDU216.txt  XDU217.txt  XDU219.txt  XDU223.txt  XDU225.txt  XDU231.txt  XDU240.txt  XDU241.txt  XDU244.txt  XDU257.txt  XDU258.txt  XDU259.txt  XDU278.txt  XDU279.txt  (+149 more)
output_obb/labels/: AUAU010003.txt  AUAU010007.txt  AUAU010011.txt  AUAU010019.txt  AUAU010025.txt  AUAU010031.txt  AUAU010032.txt  AUAU010035.txt  AUAU010039.txt  AUAU010047.txt  AUAU010048.txt  AUAU010050.txt  AUAU010073.txt  AUAU010079.txt  AUAU010081.txt  AUAU010090.txt  AUAU010100.txt  AUAU010104.txt  AUAU010107.txt  AUAU010115.txt  AUAU010121.txt  AUAU010125.txt  AUAU010127.txt  AUAU010128.txt  AUAU010129.txt  AUAU010132.txt  AUAU010134.txt  AUAU010135.txt  AUAU010143.txt  AUAU010146.txt  AUAU010148.txt  AUAU010154.txt  AUAU010158.txt  AUAU010163.txt  AUAU010166.txt  AUAU010173.txt  AUAU010176.txt  AUAU010181.txt  AUAU010183.txt  AUAU010184.txt  (+551 more)
src/: CMakeCache.txt  CMakeLists.txt  Makefile  YOLO_hbb.cpp  YOLO_obb.cpp  cmake_install.cmake  label.h  sampleYOLOV8.cpp
